# whdd

./: CMakeLists.txt  deb.sh
debian/: changelog  control  copyright  rules  watch
debian/patches/: 0001-Patched-smart_show.c-to-show-S.M.A.R.T.-SelfTest-log.patch  series
libdevcheck/: config.h  smart_show.c
